push docker image

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,5 +11,15 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: pipelining
+          password: ${{ secrets.DOCKERHUB_API_KEY }}
+
       - name: Build Docker image
-        run: docker build -t flutter-console-ui:latest .
+        run: docker build -t pt-flutter:latest .
+
+      - name: Push Docker image
+        run: docker push pt-flutter:latest
+
